--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -145,8 +145,8 @@
                                 <h4>Java</h4>
                                 <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/Cursos/java.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-eye"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
+                                    @*<a href="~/assets/img/Cursos/java.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-eye"></i></a>*@
+                                    <a href="#" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -159,8 +159,8 @@
                                 <h4>C++</h4>
                                 <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/Cursos/c++.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
+                                    @*<a href="~/assets/img/Cursos/c++.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>*@
+                                    <a href="#" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -173,8 +173,8 @@
                                 <h4>JavaScript</h4>
                                 <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/Cursos/javascript.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-eye"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
+                                    @*<a href="~/assets/img/Cursos/javascript.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-eye"></i></a>*@
+                                    <a href="#" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -187,8 +187,8 @@
                                 <h4>Kotilin</h4>
                                 <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/Cursos/Kotilin.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-eye"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
+                                    @*<a href="~/assets/img/Cursos/Kotilin.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-eye"></i></a>*@
+                                    <a href="#" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -201,8 +201,8 @@
                                 <h4>MySql</h4>
                                 <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/Cursos/mysql.png" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="icofont-eye"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
+                                    @*<a href="~/assets/img/Cursos/mysql.png" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="icofont-eye"></i></a>*@
+                                    <a href="#" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -215,8 +215,8 @@
                                 <h4>NodeJs</h4>
                                 <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/Cursos/nodejs.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-eye"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
+                                    @*<a href="~/assets/img/Cursos/nodejs.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-eye"></i></a>*@
+                                    <a href="#" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -229,8 +229,8 @@
                                 <h4>Oracle DataBase</h4>
                                 <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/Cursos/oracle.png" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-eye"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
+                                    @*<a href="~/assets/img/Cursos/oracle.png" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-eye"></i></a>*@
+                                    <a href="#" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -243,8 +243,8 @@
                                 <h4>PHP</h4>
                                 <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/Cursos/PHP.png" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="icofont-eye"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
+                                    @*<a href="~/assets/img/Cursos/PHP.png" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="icofont-eye"></i></a>*@
+                                    <a href="#" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -257,8 +257,8 @@
                                 <h4>Python</h4>
                                 <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/Cursos/python.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
+                                    @*<a href="~/assets/img/Cursos/python.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>*@
+                                    <a href="#" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -546,20 +546,20 @@
                         <form action="~/forms/contact.php" method="post" role="form" class="php-email-form">
                             <div class="form-row">
                                 <div class="col-lg-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                                     <div class="validate"></div>
                                 </div>
                                 <div class="col-lg-6 form-group">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Seu Email" data-rule="email" data-msg="Please enter a valid email" />
                                     <div class="validate"></div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                                 <div class="validate"></div>
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Menssagem"></textarea>
                                 <div class="validate"></div>
                             </div>
                             <div class="mb-3">
