--- a/Views/Admin/CursoCreate.cshtml
+++ b/Views/Admin/CursoCreate.cshtml
@@ -13,7 +13,7 @@
     <div class="container">
         <h2>Criar curso</h2>
 
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("CursoCreate", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
 
@@ -36,11 +36,19 @@
                     </div>
                 </div>
 
+
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Url_imagem, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Url_imagem, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Url_imagem, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(model => model.Descricao, new { @class = "form-control", maxlength = 150 })
+                        @Html.ValidationMessageFor(model => model.Duracao, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Url_imagem, htmlAttributes: new { @class = "control-label col-md-12" })
+                    <div class="col-md-10">
+                        <input name="arq" class="form-control" type="file" />
                     </div>
                 </div>
 
