--- a/Views/Admin/CursoCreate.cshtml
+++ b/Views/Admin/CursoCreate.cshtml
@@ -41,7 +41,7 @@
                     @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(model => model.Descricao, new { @class = "form-control", maxlength = 150 })
-                        @Html.ValidationMessageFor(model => model.Duracao, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
